    Fixed the `dirty` flag not being correctly set during an `AddUndo` event #TINY-4707
    Fixed `editor.selection.setCursorLocation` incorrectly placing the cursor outside `pre` elements in some circumstances #TINY-4058
    Fixed an exception being thrown when pressing enter inside pre elements while `br_in_pre` setting is false #TINY-4058
Version 5.4.2 (2020-08-17)
    Fixed the editor not resizing when resizing the browser window in fullscreen mode #TINY-3511
    Fixed clicking on notifications causing inline editors to hide #TINY-6058
    Fixed an issue where link URLs could not be deleted or edited in the link dialog in some cases #TINY-4706
    Fixed a regression where setting the `anchor_top` or `anchor_bottom` options to `false` was not working #TINY-6256
    Fixed the `anchor` plugin not supporting the `allow_html_in_named_anchor` option #TINY-6236
    Fixed an exception thrown when removing inline formats that contained additional styles or classes #TINY-6288
    Fixed an exception thrown when positioning the context toolbar on Internet Explorer 11 in some edge cases #TINY-6271
    Fixed inline formats not removed when more than one `removeformat` format rule existed #TINY-6216
    Fixed an issue where spaces were sometimes removed when removing formating on nearby text #TINY-6251
    Fixed the list toolbar buttons not showing as active when a list is selected #TINY-6286
    Fixed an issue where the UI would sometimes not be shown or hidden when calling the show or hide API methods on the editor #TINY-6048
    Fixed the list type style not retained when copying list items #TINY-6289
    Fixed the Paste plugin converting tabs in plain text to a single space character. A `paste_tab_spaces` option has been included for setting the number of spaces used to replace a tab character #TINY-6237
Version 5.4.1 (2020-07-08)
    Fixed the Search and Replace plugin incorrectly including zero-width caret characters in search results #TINY-4599