@@ -105,7 +105,7 @@
     }
   }
 
-  img::selection {
+  img[data-mce-selected]::selection {
     background: none;
   }
 }
